# pypi_test_yomichi

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_for_deploy.yml
src/pypi_test_yomichi/: __init__.py
tests/: test_fib.py  test_plus.py
