[metadata]
name = pypi_test_yomichi
version = 0.1.0
description = Test package for using Cython, GitHub Actions, and PyPI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yomichi/pypi_test_yomichi
license = Boost Software License 1.0
author = Yuichi Motoyama
author_email = yomichi314@gmail.com

[options]
packages = find:
zip_safe = False
python_requires= >=3.8
install_requires =
    numpy < 2.0
    scipy
